--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@ h1 {
     text-align: center;
     padding: 10px;
 }
+#guess-display{
+    background: lightgrey;
+    padding: 10px;
+}
 
 canvas {
     width: 800px;
@@ -42,7 +46,11 @@ canvas {
 <script src="/socket.io/socket.io.js"></script>
 <script src="main.js"></script>
 
-<div id="main">
-    <h1>Pictionary</h1>
-    <canvas id="canvas"></canvas>
+<h1>Pictionary</h1>
+<div id="top-message">
+    <div id="guess">
+        Make a guess: <input type="text">
+    </div>
+    <div id="guess-display"></div>
 </div>
+<canvas id="canvas"></canvas>
